2019-01-01 1.8.0 [9dae9d7]
  + in navigation mode, diagrams can be re-ordered by dragging their names in the tree view
  . F7 workaround removed, key F7 is without function now
  + in edit mode, features can be re-ordered, ports can be moved along the classifier border
  + ids of diagrams and classifiers are shown
2018-11-21 1.7.1 [8ebf36a]
  . user-doc and manpages are generated from docbook now
  + doubleclick on .cfu1 files starts crystal_facet_uml
2018-11-01 1.7.0 [15274aa]
  + tree view allows to navigate interactively
  + new sibling and new child diagrams can be created in tree view
  + when deleting a diagram, unfocused windows show parent diagram
  + only local-scenario relationships are shown in timing, sequence and communication diagrams
2018-10-15 1.6.1 [3d25d8a]
  + debian archives are now build by dh_make and debuild
  + fix for only partly visible background text
2018-10-01 1.6.0 [4151f80]
  + element configuration moved from bottom area to the right of the window
  + tree view shows current diagram in hierarchy
2018-08-26 1.5.1 [81c92e6]
  . no automatic database upgrades anymore, use -f parameter
  + fix for persisting moved relationships in sequence and timing diagrams
2018-08-25 1.5.0 [b1fe3ca]
  + Sequence and timing diagrams show messages/transitions
  + In sequence and timing diagrams, messages/transitions can be moved
  + Box and list diagrams hide all relationships
  + List diagrams soft the classifiers by list_order now
  . Database format changed (list_oder field for classifiers), up- and downwards compatible.
2018-05-11 1.4.0 [66861a9]
  + relationships can connect to ports
  + the repair-database function can detect and repair broken focused_feature keys in diagramelements
  + the repair-database function can detect and repair broken from/to_feature keys in relationships
2018-04-01 1.3.0 [7bc9dff]
  + lifelines are created and removed automatically for timing, sequence and communication diagrams