@@ -11,6 +11,7 @@
 #include "data_feature.h"
 #include "data_relationship.h"
 #include <stdio.h>
+#include <assert.h>  /* use TEST_ASSERT_* to check and report the test result, use assert() if the test case could not be executed as expected */
 
 static void set_up(void);
 static void tear_down(void);
@@ -70,6 +71,7 @@ static void tear_down(void)
     data_database_close( &database );
     data_database_destroy( &database );
     err = remove( DATABASE_FILENAME );
+    assert ( 0 == err );
 }
 
 static void classifier_create_read_modify_read(void)
