@@ -5,6 +5,7 @@
 #include "ctrl_classifier_controller.h"
 #include "storage/data_database.h"
 #include "storage/data_database_reader.h"
+#include <assert.h>  /* use TEST_ASSERT_* to check and report the test result, use assert() if the test case could not be executed as expected */
 
 static void set_up(void);
 static void tear_down(void);
@@ -66,6 +67,7 @@ static void tear_down(void)
     data_database_close( &database );
     data_database_destroy( &database );
     err = remove( DATABASE_FILENAME );
+    assert ( 0 == err );
 }
 
 static void undo_redo_classifier(void)
