@@ -2,6 +2,7 @@
 
 #include "data_small_set_test.h"
 #include "util/id/data_small_set.h"
+#include <assert.h>  /* use TEST_ASSERT_* to check and report the test result, use assert() if the test case could not be executed as expected */
 
 static void set_up(void);
 static void tear_down(void);
