@@ -5,7 +5,7 @@
 #include "pencil_input_data.h"
 #include <stdio.h>
 #include <string.h>
-#include <assert.h>
+#include <assert.h>  /* use TEST_ASSERT_* to check and report the test result, use assert() if the test case could not be executed as expected */
 
 static void set_up(void);
 static void tear_down(void);
